Maven Rewrite plugin execution for the AutoFormat and Java8toJava11 migration.